--- a/shiganshina/style.css
+++ b/shiganshina/style.css
@@ -17,6 +17,52 @@ body {
 }
 
 /* ************************************************* */
+
+.profily-container {
+    display: flex;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+    /* max-width: 800px; */
+    /* width: 90%; */
+    margin: 50px;
+}
+
+.profily-left {
+    background-color: #2d3436;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    flex: 1;
+}
+
+.profily-picture {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    border: 4px solid #fff;
+}
+
+.profily-name {
+    font-size: 24px;
+    margin: 0;
+}
+
+.profily-right {
+    padding: 20px;
+    flex: 3;
+}
+
+.profily-description {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #333;
+}
+
+
+/* *************************************************** */
 .profile-card-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Three columns, each occupying equal space */
@@ -98,7 +144,7 @@ body {
 }
 
 /* Responsive adjustments */
-@media (max-width: 768px) {
+@media (max-width: 650px) {
     .navbar-container {
         flex-direction: column;
         align-items: flex-start;
